--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "email-templates": "^7.1.0",
